// Copyright 2021. The Tari Project
//
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions are met:
//
// 1. Redistributions of source code must retain the above copyright notice,
// this list of conditions and the following disclaimer.
//
// 2. Redistributions in binary form must reproduce the above copyright notice,
// this list of conditions and the following disclaimer in the documentation
// and/or other materials provided with the distribution.
//
// 3. Neither the name of the copyright holder nor the names of its contributors
// may be used to endorse or promote products derived from this software without
// specific prior written permission.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
// AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
// IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
// ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE
// LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
// CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
// SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
// INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
// CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
// ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
// POSSIBILITY OF SUCH DAMAGE.
syntax = "proto3";

package tari.dan.network;

import "common.proto";
import "consensus.proto";
import "transaction.proto";

message DanMessage {
  oneof message {
    tari.dan.consensus.HotStuffMessage hot_stuff = 1;
    tari.dan.transaction.Transaction new_transaction = 2;
    NetworkAnnounce network_announce = 3;
  }

  // Message tag for debugging purposes. This is typically set to some
  // identifier that groups a set of messages together e.g. payload ID, or is
  // not provided at all.
  string message_tag = 5;
}

message NetworkAnnounce {
  bytes identity = 1;
  PeerIdentityClaim claim = 2;
}

message IdentitySignature {
  uint32 version = 1;
  tari.dan.common.Signature signature = 2;
  int64 updated_at = 3;
}

message PeerIdentityClaim {
  repeated bytes addresses = 1;
  IdentitySignature signature = 3;
}
